added database config

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ services:
   - postgresql
 
 before_script:
-  - sudo -u postgres psql -c "CREATE DATABASE IF NOT EXISTS politico;"
+  - sudo -u postgres psql -c "CREATE DATABASE politico;"
   - sudo -u postgres psql -c "CREATE SCHEMA IF NOT EXISTS politico;"
   - sudo -u postgres psql -c "CREATE USER admin WITH PASSWORD 'admin123';"
   - sudo -u postgres psql -c "ALTER USER admin WITH SUPERUSER;"
