--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pluggy==0.8.1
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
 py==1.8.0
+PyJWT==1.7.1
 pylint==2.2.2
 pytest==4.3.0
 python-dotenv==0.10.1
