--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,35 @@ install:
 
 env:
   - DATABASE_URL="dbname='politico' user='admin' host='localhost' password='admin123'"
+  - PRIVATE_KEY="""
+  -----BEGIN PRIVATE KEY-----
+  MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDBruF3OUH8htTT
+  7Zu+9ROMKQ0D0q9dK1G7zUnk6m5j5pUMKu8/R5tPtxOJ3MMzYPy78AGPgea/ceHM
+  Atdd4pt1AMVG4wIIbEn3E6nXziLaGuNhrdf/qAvmgsPW4sHndX7hznMyn958VgrL
+  SNb0QqqE3K8nxNa7jxzdWLf+BQRNWg8GF49QIVI2Gb0aWusf7B2ZiGaER+V/eVEY
+  lDRfkNmuPyii9Dx9QpQ5BBEmZ3Bk3Bd115DJ8JB9CxepGI4bGBRurH3pFlU43NaH
+  Q9MM6CdwI81CYwNnYsEr3lYr4ZcEEQfBOXYvc2YkxdfFV+c0TbBxqdql0+Vtj4wR
+  Owiz0x0FAgMBAAECggEACtKIyq6qXz/xeH4Ya80p8HUCwynsnpojEQlhjacD0BU8
+  Ute7Up/fr86dCuEJDz/mH2JD1A8AI8ZrRYkLG7Xj1d/bJiDdJjdW0rWIkgR0shc6
+  iWS7Yw+yyoiYBNPa3eIU2u08RqHkPrJYHA/P4woumQnzx5caIJTYmg2xCkKhgOjk
+  X8Z5BGz+WJxn1aI1F+5CdJB2UfG0lHPRknLB1LMkh63srebCqIxf2vtbxZCIHKTK
+  PiAJ8QUxUzqNQkQiKd26bKSYelYpCyVLoSjjS7skzV77VyizV81/qqTGOrCD+zM0
+  rgw+TaWU/4mPoUuYtsgntPH2hMUT9zN7WABVChmgwQKBgQDyvXxMmgwnBA1k8noM
+  RGLk3485uIh5Imd2UQ+XK2l9tGPKqi4lG2zmZWGk/YRCu7Ag7a8HaiisIrSszBpH
+  ntELKQ/l+70vm5/phJBrGlISrTB6Xs/5/Q70GxpYQh3qRARSF5GOaXzTjtSgu2lA
+  NSYL/WBeFSTVEkAGpmMTxNiVbQKBgQDMQ1/Iuvm2DwrGd24IO6I4qzqL11m93UBp
+  O0LhwC38AYPReHajPqtJfCpovVlYFQuanCHSJLMs4xWmOibuZwiE14GrtzIK0YE9
+  ps5/iG+8FVDzGzez9CAbWf9aFpe56aGeyQyv2vF+g5Zk1ojd6tIug4zGVf1yxDXB
+  2nAkTOMe+QKBgGtFdcLcaPZtAgZUab82EYYXjdHyTM1LePF+jSc/FhVpPJh5cH8R
+  iaSftPEW3/Ylv4Ytw6XBMkwv4ixi3lI8SyFlehMmlsqNObQW00OhlBeQ1dWeRMaz
+  IIKb356VSWcXu9kTdU28LF/JxQlrCO5JDpFJ3eZ17ZsDv6uwqCQ6X4RZAoGASC2O
+  jSm0z2ZlUlglY3dfDVNELuH77iFef1DXg1obZa9LWxuMIIcmk6LygWxXQ867+Pgu
+  40jgn33myoRF+XwjAH3+biUf477AQn7M/TfC8908a4s0lbwwFDorBzRwjNtHpwo4
+  F3PwXdo1rJA6cOBnQNRvTC5ajtFShZuggNNCdlECgYEAobmt9WE266ZNOo1NUruW
+  lNUC2Hg0ls5Nr3Yt5DoScFfYH8hMcPbV5/FZG+tXD11M0wXKLh87D6KFvoH5r09l
+  yDRdNoaQ3YjdFKJAftNt5MWBYcK/lnLGYuFxr9DkqUJYSZ+qDSrBfSUbQRYBeSvn
+  frGhoUjbAl+SmW/go6wCaE8=
+  -----END PRIVATE KEY-----"""
   
 
 services:
